fix: 체크리스트 현황 조회 API 재구현